--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,11 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/item_foto"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:src="@drawable/person"
-        android:id="@+id/item_foto"/>
+        app:civ_border_width="2dp"
+        app:civ_border_color="#FF000000"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -27,7 +30,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/item_teledone"
+            android:id="@+id/item_telefone"
             android:text="Telefone"
             android:textSize="16sp"
             android:paddingLeft="10dp"
