--- a/app/src/main/res/layout/activity_formulario.xml
+++ b/app/src/main/res/layout/activity_formulario.xml
@@ -35,29 +35,28 @@
 
 
         <EditText
-            android:id="@+id/formulario_nome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Nome" />
-
-
-        <EditText
-            android:id="@+id/formulario_endereco"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Endereço" />
+            android:hint="@string/campo_nome"
+            android:id="@+id/formulario_nome"/>
 
         <EditText
-            android:id="@+id/formulario_telefone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Telefone" />
+            android:hint="@string/campo_endereco"
+            android:id="@+id/formulario_endereco"/>
 
         <EditText
-            android:id="@+id/formulario_site"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Site" />
+            android:hint="@string/campo_telefone"
+            android:id="@+id/formulario_telefone"/>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/campo_site"
+            android:id="@+id/formulario_site"/>
 
         <RatingBar
             android:layout_width="wrap_content"
