adicionando provas e detalhes e usando fragments

--- a/app/src/main/res/menu/menu_lista_alunos.xml
+++ b/app/src/main/res/menu/menu_lista_alunos.xml
@@ -9,6 +9,15 @@
         android:id="@+id/menu_enviar_notas"
         android:title="Enviar notas"
         android:icon="@drawable/ic_enviar"
-        app:showAsAction="always"/>
+        app:showAsAction="always">
+    </item>
+
+
+    <item
+        android:id="@+id/menu_baixar_provas"
+        android:title="Baixar Provas"
+        android:icon="@drawable/ic_receber"
+        app:showAsAction="always">
+    </item>
 
 </menu>
