--- a/app/src/main/res/layout/activity_lista_alunos.xml
+++ b/app/src/main/res/layout/activity_lista_alunos.xml
@@ -7,7 +7,8 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/lista_alunos"/>
+        android:id="@+id/lista_alunos"
+        android:layout_marginLeft="2dp"/>
 
     <Button
         android:layout_width="56dp"
