terminando as fragments do detalhes provas nas duas orientações e colocando a fragment na pilha das activitys

--- a/app/src/main/res/layout-land/activity_provas.xml
+++ b/app/src/main/res/layout-land/activity_provas.xml
@@ -6,14 +6,14 @@
     android:orientation="horizontal">
 
 
-    <include
-        layout="@layout/activity_provas"
+    <FrameLayout
+        android:id="@+id/frame_principal"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"/>
 
-    <include
-        layout="@layout/activity_detalhes_prova"
+    <FrameLayout
+        android:id="@+id/frame_secundario"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"/>
