--- a/app/src/main/res/menu/menu_lista_alunos.xml
+++ b/app/src/main/res/menu/menu_lista_alunos.xml
@@ -9,15 +9,19 @@
         android:id="@+id/menu_enviar_notas"
         android:title="Enviar notas"
         android:icon="@drawable/ic_enviar"
-        app:showAsAction="always">
-    </item>
+        app:showAsAction="always"/>
 
 
     <item
         android:id="@+id/menu_baixar_provas"
         android:title="Baixar Provas"
         android:icon="@drawable/ic_receber"
-        app:showAsAction="always">
-    </item>
+        app:showAsAction="always"/>
+
+    <item
+        android:id="@+id/menu_mapa"
+        android:title="Visualizar no Mapa"
+        android:icon="@drawable/ic_mapa"
+        app:showAsAction="always"/>
 
 </menu>
